<?php

namespace App\Domain\Notification;

class KeepTrace{

}