@startuml UML - Classe

left to right direction

'========================
' CORE ACCOUNT
'========================

interface Account{
    + id(): string
    + email(): string
    + passwordHash(): string
}

class User{
    id: string
    name: string
    siret: string
    email: string
    passwordHash: string
    description: string
}

class Candidate{
    id: string
    firstName: string
    lastName: string
    email: string
    passwordHash: string
    image: StaticMedia
    cv: StaticMedia
    searchRadius: int 
    description: string
}

Account <|.. User
Account <|.. Candidate

'========================
' REPOSITORIES
'========================

interface UserRepository{
    + save(user)
    + update(user)
    + findByEmail(email): User
    + findById(id): User
    + delete(id)
}

interface CandidateRepository{
    + findById(id): Candidate
    + findByEmail(email): Candidate
    + save(candidate)
    + apply(candidateId, offerId, cvData)
}

User --> UserRepository
Candidate --> CandidateRepository

'========================
' ADDRESS
'========================

class Address{
    street: string
    code: string 
    country: string
}

User "1" -- "1..*" Address
Candidate "1" --> "1" Address

'========================
' MEDIA (Aligned with sequences)
'========================

class StaticMedia{
    name: string
    size: Decimal
    mime: string
    + mustBe(sizeLimitation, mime)
}

class TimedMedia {
    name: string
    size: Decimal
    mime: string
    duration: Decimal
    + mustBe(type, secondsLimitation, sizeLimitation)
}

interface MediaFactoryInterface{
    + createStaticMedia(file)
    + createTimedMedia(file)
}

interface MediaStorageInterface{
    + store(media)
}

User "1" -- "0..*" StaticMedia
User "1" -- "0..*" TimedMedia

Candidate "1" -- "1" StaticMedia : image
Candidate "1" -- "1" StaticMedia : cv

'========================
' JOB OFFER
'========================

class JobOffer{
    id: string
    title: string
    content: string
    status: JobStatus
    createdAt: Datetime
    updatedAt: Datetime
}

interface JobOfferRepositioryInterface{
    + save(offer)
    + update(offer)
    + publish(id)
    + setAsDraft(id)
    + erase(id)
    + findById(id)
}

class Category {
    name: string
    description: string
}

class JobOfferImage{}

JobOffer "1" -- "1..*" Category
JobOffer "1" -- "0..*" JobOfferImage
User "1" -- "1..*" JobOffer

'========================
' APPLICATION
'========================

class JobOfferApplication{
    id: string
    status: string
    createdAt: Datetime
}

interface ApplicationRepository{
    + assertExist(offerId)
    + save(application)
    + changeStatus(applicationId, status)
    + validate(userId, offerId, applicationId)
}

Candidate "1" -- "1..*" JobOfferApplication
JobOfferApplication "*" --> "1" JobOffer
ApplicationRepository --> JobOfferApplication

'========================
' CV MANAGEMENT (important)
'========================

class CVParser{
    + parse(cv): structuredData
}

class CVManager{
    + retrieveOrGenerateCV(candidateId)
}

CVManager --> CVParser
CVManager --> CandidateRepository

'========================
' INTERVIEW
'========================

class Interview{
    id: string
    startDate: Datetime
    duration: int
    status: InterviewStatus
}

interface InterviewRepositoryInterface{
    + verify(userId, applicationId)
    + save(interview)
    + delete(interviewId)
}

JobOfferApplication "1" -- "0..*" Interview
InterviewRepositoryInterface --> Interview

enum InterviewStatus{
    CANCEL
    CLOSED
    MISSED
    SCHEDULED
    IN_PROGRESS
}

'========================
' AUTH / SECURITY
'========================

class OTP {
    hashCode: string
    attempts: int
    expiresAt: Datetime
    purpose: AccountFlowPurpose
}

interface OTPRepository{
    + find(token)
}

Account "1" -- "0..*" OTP
OTPRepository --> OTP

enum AccountFlowPurpose {
    EMAIL_CHANGE
    SIGN_UP
    LOGIN_WARNING
}

'========================
' EMAIL
'========================

class EmailMessage {
    title: string
    description: string
    code: string
}

interface EmailServicesInterface{
    + sendTo(receiver, document)
    + prepareEmail(emailMessage)
}

EmailServicesInterface --> EmailMessage

'========================
' AGENT
'========================

class Agent {
    email: string
    password: string
}

interface AgentRepositoryInterface {
    + validateAssociation
    + save(agent)
    + deleteAgent(id)
}

class Role {
    name: string
}

User "1" -- "0..*" Agent
Agent "1" -- "1..*" Role
Agent --> AgentRepositoryInterface

'========================
' TRACE / LOG
'========================

class KeepTrace{
    id: string
    message: string
    status: string   
    entity_type: string
    createdAt: Datetime
    readAt: Datetime
}

Account "1" -- "0..*" KeepTrace

'========================
' ENUM
'========================

enum JobStatus{
    DRAFT
    CLOSED
    PUBLISHED
}

@enduml